[gd_scene load_steps=4 format=3 uid="uid://f2ithonn4o4l"]

[ext_resource type="Script" path="res://enemies/enemy_base.gd" id="1_a17i2"]
[ext_resource type="Texture2D" uid="uid://dumkfs18bpye6" path="res://assets/Tilesheet/tilesheet.png" id="1_vwqbw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rr6cb"]
radius = 128.0

[node name="enemy_base" type="CharacterBody2D" node_paths=PackedStringArray("_dash_wait_timer", "_dash_timer") groups=["enemies"]]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_a17i2")
_dash_wait_timer = NodePath("dash_wait_timer")
_dash_timer = NodePath("dash_timer")

[node name="texture" type="Sprite2D" parent="."]
texture = ExtResource("1_vwqbw")
region_enabled = true

[node name="animation" type="AnimationPlayer" parent="."]

[node name="collision" type="CollisionShape2D" parent="."]

[node name="range_area" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="range_area"]
shape = SubResource("CircleShape2D_rr6cb")

[node name="dash_wait_timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="body_entered" from="range_area" to="." method="_on_range_area_body_entered"]
[connection signal="timeout" from="dash_wait_timer" to="." method="_on_dash_wait_timer_timeout"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
